syntax = "proto3";
package com.netflix.conductor.proto;

import "google/protobuf/struct.proto";

option java_outer_classname = "SubWorkflowParamsPb";
option go_package = "github.com/netflix/conductor/client/gogrpc/conductor/model";

message SubWorkflowParams {
    string name = 1;
    google.protobuf.Value version = 2;
}
