syntax = "proto3";
package com.netflix.conductor.proto;

import "model/subworkflowparams.proto";
import "google/protobuf/struct.proto";

option java_outer_classname = "WorkflowTaskPb";
option go_package = "github.com/netflix/conductor/client/gogrpc/conductor/model";

message WorkflowTask {
    message WorkflowTaskList {
        repeated WorkflowTask tasks = 1;
    }
    enum Type {
        SIMPLE = 0;
        DYNAMIC = 1;
        FORK_JOIN = 2;
        FORK_JOIN_DYNAMIC = 3;
        DECISION = 4;
        JOIN = 5;
        SUB_WORKFLOW = 6;
        EVENT = 7;
        WAIT = 8;
        USER_DEFINED = 9;
    }
    string name = 1;
    string task_reference_name = 2;
    string description = 3;
    map<string, google.protobuf.Value> input_parameters = 4;
    string type = 5;
    string dynamic_task_name_param = 6;
    string case_value_param = 7;
    string case_expression = 8;
    map<string, WorkflowTask.WorkflowTaskList> decision_cases = 9;
    string dynamic_fork_tasks_param = 10;
    string dynamic_fork_tasks_input_param_name = 11;
    repeated WorkflowTask default_case = 12;
    repeated WorkflowTask.WorkflowTaskList fork_tasks = 13;
    int32 start_delay = 14;
    SubWorkflowParams sub_workflow_param = 15;
    repeated string join_on = 16;
    string sink = 17;
    bool optional = 18;
}
